src/test/ui/repr/repr-align-assign.stderr
error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/repr-align-assign.rs:5:8
   |
LL | #[repr(align=8)]
   |        ^^^^^^^ help: use parentheses instead: `align(8)`

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/repr-align-assign.rs:9:8
   |
LL | #[repr(align="8")]
   |        ^^^^^^^^^ help: use parentheses instead: `align(8)`

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/repr-align-assign.rs:5:8
   |
LL | #[repr(align=8)]
   |        ^^^^^^^ help: use parentheses instead: `align(8)`

error[E0693]: incorrect `repr(align)` attribute format
  --> $DIR/repr-align-assign.rs:9:8
   |
LL | #[repr(align="8")]
   |        ^^^^^^^^^ help: use parentheses instead: `align(8)`

error: aborting due to 4 previous errors

